--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -362,7 +362,7 @@
                  <div class="label_wrapper_landing_page audio_label_wrapper_landing_page">
                    <i class="fa fa-volume-up audio-film_label_landing_page" aria-hidden="true" style="font-size:18px;"></i>
                  </div>
-                 {% if elem.embed_video %}
+                 {% if elem.video_embed %}
                  <div class="label_wrapper_landing_page film_label_wrapper_landing_page">
                    <i class="fa fa-film audio-film_label_landing_page" aria-hidden="true" style="font-size:18px;"></i>
                  </div>
@@ -399,7 +399,7 @@
                <div class="label_wrapper audio_label_wrapper">
                  <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                </div>
-               {% if elem.embed_video %}
+               {% if elem.video_embed %}
                <div class="label_wrapper film_label_wrapper">
                  <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
                </div>
@@ -455,7 +455,7 @@
                    <div class="label_wrapper audio_label_wrapper">
                      <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                    </div>
-                   {% if elem.embed_video %}
+                   {% if elem.video_embed %}
                    <div class="label_wrapper film_label_wrapper">
                      <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
                    </div>
@@ -487,7 +487,7 @@
                  <div class="label_wrapper audio_label_wrapper">
                    <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                  </div>
-                 {% if elem.embed_video %}
+                 {% if elem.video_embed %}
                  <div class="label_wrapper film_label_wrapper">
                    <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
                  </div>
@@ -518,7 +518,7 @@
                  <div class="label_wrapper audio_label_wrapper">
                    <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                  </div>
-                 {% if elem.embed_video %}
+                 {% if elem.video_embed %}
                  <div class="label_wrapper film_label_wrapper">
                    <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
                  </div>
