--- a/app/static/css/KiW_redux_annotations.css
+++ b/app/static/css/KiW_redux_annotations.css
@@ -627,6 +627,9 @@ padding:40px;
 
 /* this is added to the audiodoc page navbar to position the links properly */
 .navbarADpage {
+  padding: 0px 339px 20.5px 20px;
+}
+.navbarADpage_video {
   padding: 0px 250px 20.5px 20px;
 }
 
