--- a/app/templates/audiodoc_annotations.html
+++ b/app/templates/audiodoc_annotations.html
@@ -49,7 +49,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand navbarADpage" href=" {{url_for('index')}}">   <!-- for audiodoc, the logo goes back to home page-->
+        <a class="navbar-brand navbarADpage {% if audiodocs[0].video_embed %}navbarADpage_video{% endif %}" href=" {{url_for('index')}}">   <!-- for audiodoc, the logo goes back to home page-->
 
     <!-- svg shizzle -->
     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
