--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -10,7 +10,7 @@
   <meta name="description" content="{{audiodocs[0].og_description}}">
   <meta name="keywords" content="Knowitwall, Know It Wall, audio-documentary, audiodoc, outreach, academia, insightful, science, humanities">
   <meta name="author" content="">
-  <meta property="og:image" content="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" />
+  <meta property="og:image" content="https://pbs.twimg.com/profile_banners/3297484981/1450923489/1500x500" />
   <meta property="og:title" content="Knowitwall episodes" />
   <meta property="og:description" content="Browse through all the Knowitwall episodes" />
   <meta property="og:url" content="http://knowitwall.com/all_episodes" />
