--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -274,6 +274,9 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
         <ul class="nav navbar-nav navbar-right">
+          <li class="page-scroll">
+            <a href="#page-top" >All Episodes</a>
+          </li>
           <li>
             <a href="https://twitter.com/KnowitWall" target="_blank" class=""><i class="fa fa-fw fa-twitter"></i></a>
           </li>
