--- a/app/templates/audiodoc_annotations.html
+++ b/app/templates/audiodoc_annotations.html
@@ -313,7 +313,7 @@
   <!-- <header id="header_no_player" class="audiodoc_header" style="padding-left:150px;padding-right:150px;background-color:black"> -->
 
 <!-- container version 1 -->
-    <div class="container container_video" style="padding-bottom:230px;padding-top:300px">
+    <div class="container container_video" style="padding-bottom:230px">
 
 <!-- container version 2 -->
  <!-- linear-gradient(rgba(255, 255, 255, 0.3),rgba(255, 255, 255, 0.3)), -->
@@ -371,10 +371,8 @@
           {{audiodocs[0].topic_name | safe}}
         </div>
       </div>
-
       <div class="col-lg-10 col-lg-offset-1 text-center page-scroll" style="color: black; font-size:125%">
          <i style="color: {{audiodocs[0].by_in_colour}}">by</i> <a href="#author" class="highlight">{{audiodocs[0].author_name | safe}}</a> <i style="color: {{audiodocs[0].by_in_colour}}">in</i> <span class="highlight">{{audiodocs[0].discipline}} </span>
-
     </div>
   </div>
     <div class="row arrow_row">
