--- a/app/static/css/homepage_redesign.css
+++ b/app/static/css/homepage_redesign.css
@@ -51,17 +51,22 @@ browser for some reason.. */
   padding-left: 6px;
   padding-right: 6px;
 }
-.homepage_box_first_col{
-  /*padding-top: 12px;*/
-}
+
 @media(max-width:991px){
   .homepage_box_col_2{
     padding-top: 12px;
   }
 }
-@media(max-width:1198px){
-  .homepage_box_first_col{
-    padding-top: 60px;
+/* to make the nav bar fit on one line */
+@media(max-width: 853px) and (min-width:769px){
+  .nav>li>a{
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+}
+@media(min-width:768px) and (max-width:992px){
+  .container_nav_bar{
+    width: inherit;
   }
 }
 
