--- a/app/static/css/knowitwallredux.css
+++ b/app/static/css/knowitwallredux.css
@@ -600,7 +600,11 @@ padding:40px;
 .navbar-brand {
   padding: 0px 100px 20.5px 20px;
 }
-
+@media(max-width: 1200px) and (min-width:767px){
+  .navbar-brand {
+    padding: 0px 0px 20.5px 20px;
+  }
+}
 /* this is added to the audiodoc page navbar to position the links properly */
 .navbarADpage {
   padding: 0px 400px 20.5px 20px;
