--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -60,7 +60,7 @@
   <nav class="navbar navbar-default navbar-fixed-top">
 
 
-    <div class="container">
+    <div class="container container_nav_bar">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header page-scroll">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
