--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -26,9 +26,11 @@
 
   <!-- TEST: bootstrap toggle -->
     <!-- <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet"> -->
-  <link href="/static/css/archive_page.css" rel="stylesheet">
+
   <!-- HACK: just attached homepage_redesign.css to get the box stylings -->
   <link href="/static/css/homepage_redesign.css" rel="stylesheet">
+
+  <link href="/static/css/archive_page.css" rel="stylesheet">
 <script src='/static/js/masonry.pkgd.min.js'></script>
   <!-- Custom Fonts -->
   <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -39,7 +41,10 @@
 
 </head>
 
-<body id="page-top">
+<body>
+  <div id="page-top" style="display:hidden;position:absolute; top:0px">
+hidden
+  </div>
   <!-- Navigation -->
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
