font-size for mobile homepage redesign

--- a/app/static/css/homepage_redesign.css
+++ b/app/static/css/homepage_redesign.css
@@ -18,7 +18,7 @@ browser for some reason.. */
   margin-right: 12px;
 }
 @media(max-width: 415px){
-  #about p{
+  p{
     font-size: 17px;
   }
   #about{
