--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -56,7 +56,7 @@ hidden
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand navbarADpage" href=" {{url_for('index')}}">   <!-- for audiodoc, the logo goes back to home page-->
+        <a class="navbar-brand" href=" {{url_for('index')}}">   <!-- for audiodoc, the logo goes back to home page-->
           <!-- svg shizzle -->
           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              width="100%" height="52.5px" viewBox="0 0 302.5 52.5" enable-background="new 0 0 302.5 52.5" xml:space="preserve">
@@ -288,7 +288,7 @@ hidden
 </section>
 
 
-  <!-- Archive on mobile-->
+
   <section class="archive_mobile">
     <div class="container container_mobile">
       <div class="row archive_row">
@@ -358,7 +358,7 @@ hidden
 
 
 
-  <!-- Archive on desktop -->
+
   <section class="archive_desktop">
     <div class="container desktop_archive" style="width:100%; margin-left:0px;margin-right:0px;padding-left:100px;padding-right:100px;">
       <div class="episodes_container" style="border:1px solid #bdbdbd;background-color:white;border-radius:6px">
@@ -711,7 +711,7 @@ hidden
 
 
       </div>
-    </div> <!-- end of desktop_archive container -->
+    </div>
   </section>
 
 {% endblock %}
@@ -720,10 +720,6 @@ hidden
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
   <div class="scroll-top visible-xs visble-sm mobile_titles_filter">
-    <!-- <a class="btn btn-primary" href="#page-top">
-      <i class="fa fa-chevron-up"></i>
-    </a> -->
-    <!-- <input id="toggle-title_abstract" type="checkbox" data-toggle="toggle" data-on="Titles" data-off="Abstracts"> -->
     <div class="mobile_filter_wrapper">
       <div class="archive_filter">
         <ul>
@@ -745,7 +741,7 @@ hidden
 <script src="/static/js/jquery.easing.min.js"></script>
 <script src="/static/js/knowitwall.js"></script>
 <script src="/static/js/archive_filter.js"></script>
-
+<script src="/static/js/bootstrap.min.js"></script>
 <!-- Masonry -->
 
 <script>
