--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -294,7 +294,7 @@
     </div>
   </nav>
 
-  <header style="background: url('{{ audiodocs[0].topic_image }}') fixed; background-repeat: no-repeat; background-size:cover;background-position: 0px 77px;">
+  <header style="background: url('{{ audiodocs[0].topic_image }}') fixed; background-repeat: no-repeat; background-size:cover;background-position: 0px 77px;background-attachment:scroll">
     <div class="container">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center">
