--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -244,7 +244,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li>
             <!-- <a href="/all_episodes">All Episodes</a> -->
-            <a href="/newsletter" id="newsletter">Newsletter</a>
+            <a href="/all_episodes" id="all_episodes">All Episodes</a>
           </li>
           <li>
             <a href="https://twitter.com/KnowitWall" target="_blank" class=""><i class="fa fa-fw fa-twitter"></i></a>
