episode page on ipad: nav-bar is not terrible now

--- a/app/static/css/knowitwallredux.css
+++ b/app/static/css/knowitwallredux.css
@@ -604,13 +604,23 @@ padding:40px;
   .navbar-brand {
     padding: 0px 0px 20.5px 20px;
   }
+  .navbarADpage {
+    padding: 0px 0px 20.5px 20px;
+  }
 }
 /* this is added to the audiodoc page navbar to position the links properly */
 .navbarADpage {
   padding: 0px 400px 20.5px 20px;
 }
-
-@media(max-width: 700px){
+@media(max-width: 1200px) and (min-width:768px){
+  .navbar-brand {
+    padding: 0px 0px 20.5px 20px;
+  }
+  .navbarADpage {
+    padding: 0px 70px 20.5px 20px;
+  }
+}
+@media(max-width: 768px){
   .navbarADpage {
     padding: 0px 0px 20.5px 20px;
   }
